# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml
migrations/: 20240424094843_create_gameplay_tables.sql  20240424102733_add_unique_gameplay.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: gameplay.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
